Re-estructuration of the Express server files
